References to html and report

--- a/project_html/g30_project.html
+++ b/project_html/g30_project.html
@@ -10,15 +10,19 @@
 <body>
 	<h1 align="center"><em>Welcome!</em></h1>
 	<p>Our Original design can be found <a href="http://www.cse.iitb.ac.in/~vishala/cs296-lab01-sub.html">here</a>.</p>
-	<p>The project report can be found <a href="">here</a>.</p>
+	<p>The project report can be found <a href="http://www.cse.iitb.ac.in/~vishala/g30_project_report.pdf">here</a>.</p>
 	<p>Some screenshots from the simulation :</p>
-	<img src="Screenshot.png" alt="Screenshot2" width= "600" height = "300"/>
-	<img src="FinalDesign2.png" alt="Screenshot1" width="600" height = "300"/>
+	<img src="Screenshot.png" alt="Screenshot1" width= "600" height = "300"/>
+	<img src="FinalDesign2.png" alt="Screenshot2" width="600" height = "300"/>
+	<img src="Screenshot1.png" alt="Screenshot3" width="600" height = "300"/>
 	<p>References for the project :</p>
 	<ol>
 		<li><a href=http://www.learn-cocos2d.com/api-ref/1.0/Box2D/html/index.html>Box 2D documentation</a></li>
 		<li><a href=https://www.youtube.com/watch?v=DL3h_GS3tbQ>Video On Dancing JCB's</a></li>
 		<li><a href=https://en.wikipedia.org/wiki/Forklift_truck>Wiki Page On Forklift Trucks</a></li>
+		<li><a href=https://www.iforce2d.net/b2dtut/joints-revolute>Box 2D Tutorial</a></li>
+		<li><a href=http://www.thegeekstuff.com/2012/08/gprof-tutorial/>Tutorial On Gprof</a></li>
+		<li><a href=http://www.andy-roberts.net/writing/latex>Tutorial On Latex</a></li>
 	</ol>
 </body>
 </html>
